[package]
name = "myfind"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
rand = "0.8.3"
regex = "1" 
tracing = "0.1"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false 
overflow-check = false
lto = true 
panic = 'unwind'
incremental = false
codegen-units = 1
rpath  = false
